# telegram-ai-assistant

./: .env.example  .gitignore  .mcp.json  README.md  requirements.txt
.claude/: CLAUDE.md  settings.json
.claude/commands/: analyze-workspace.md  apply-learnings.md  create-skill.md  pickup.md  prime-telegram.md  retrospective.md  screenshot-compare.md  validate.md  visual-verify.md
context/: business_hierarchy.md  constraints.md  offers.md  prime.md  sops.md  soul.md  strategy.md  team.md  voice.md
cron/: article_finder.sh  daily_brief.sh  data_snapshot.sh  heartbeat.sh  meeting_autoprocess.sh  morning_digest.sh  self_improve.sh  task_reminder.sh  weekly_report.sh
docs/: telegram_bot.md
execution/: common.py
execution/bot/: CLAUDE.md  package.json
execution/daily_brief/: brief_generator.py  brief_prompt.md  heartbeat.py  morning_digest.py
execution/data_os/: db_router.py  db_setup.py  query.py  snapshot.py
execution/intelligence/: article_finder.py  fireflies_client.py  intelligence_orchestrator.py  meeting_analyzer.py  meeting_autoprocess.py  self_improve.py  slack_monitor.py  voice_processor.py  weekly_report.py
execution/task_os/: gtd_processor.py  reminder.py
execution/telegram/: bot.py  bot_memory.py  document_handler.py  email_handler.py  meeting_handler.py  memory_search.py  photo_handler.py  scheduler.py  skills_menu.py  slash_commands.py  task_handler.py  transcript_store.py  tts.py  utils.py  (+1 more)
mcps/ea-journal/: README.md  pyproject.toml  server.py
mcps/ea-prompts/: README.md  pyproject.toml  server.py
templates/: mcp-json-full.json
(+344 files in other folders)
